--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.farbkecks</groupId>
   <artifactId>tictactoe</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>3.0</version>
 
   <name>tictactoe</name>
   <!-- FIXME change it to the project's website -->
